--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -15,7 +15,7 @@ eureka:
     service-url:  
       defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka 
 management:
-     ebdpoints:
-          web:
-            exposure:
-                refresh
+  endpoints:
+    web:
+      exposure:
+        include: refresh
